# AI-Scrum-Agent

./: LICENSE  analyze_transcript.py  pyproject.toml  requirements.txt
prompts/: full_system_prompt.md  sprint_meeting_info_template.txt
src/: auth.py  main.py
src/api/: analyze_transcript.py  process_audio.py
src/utils/: audio_transcriber.py  download_google_meet_recordings.py  s3_utils.py  transcript_analyser.py
